// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with form options elevation 0 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-1ynw4a6-MuiButtonBase-root-MuiListItem-root"
    form="[object Object]"
    parent="[object Object]"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap MuiListItemText-primary css-1f0fhap-MuiTypography-root"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation 0 with layout 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider MuiListItem-button css-1oz3qhr-MuiButtonBase-root-MuiListItem-root"
    form="[object Object]"
    parent="[object Object]"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap MuiListItemText-primary css-1f0fhap-MuiTypography-root"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation 1 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-1ynw4a6-MuiButtonBase-root-MuiListItem-root"
    form="[object Object]"
    parent="[object Object]"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap MuiListItemText-primary css-1f0fhap-MuiTypography-root"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation 1 with layout 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider MuiListItem-button css-1oz3qhr-MuiButtonBase-root-MuiListItem-root"
    form="[object Object]"
    parent="[object Object]"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap MuiListItemText-primary css-1f0fhap-MuiTypography-root"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation undefined 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-1ynw4a6-MuiButtonBase-root-MuiListItem-root"
    form="[object Object]"
    parent="[object Object]"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap MuiListItemText-primary css-1f0fhap-MuiTypography-root"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation undefined with layout 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider MuiListItem-button css-1oz3qhr-MuiButtonBase-root-MuiListItem-root"
    form="[object Object]"
    parent="[object Object]"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap MuiListItemText-primary css-1f0fhap-MuiTypography-root"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options icon person 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-1ynw4a6-MuiButtonBase-root-MuiListItem-root"
    form="[object Object]"
    parent="[object Object]"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
      >
        person
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap MuiListItemText-primary css-1f0fhap-MuiTypography-root"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options icon person with layout 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider MuiListItem-button css-1oz3qhr-MuiButtonBase-root-MuiListItem-root"
    form="[object Object]"
    parent="[object Object]"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
      >
        person
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap MuiListItemText-primary css-1f0fhap-MuiTypography-root"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options icon undefined 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-1ynw4a6-MuiButtonBase-root-MuiListItem-root"
    form="[object Object]"
    parent="[object Object]"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap MuiListItemText-primary css-1f0fhap-MuiTypography-root"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options icon undefined with layout 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider MuiListItem-button css-1oz3qhr-MuiButtonBase-root-MuiListItem-root"
    form="[object Object]"
    parent="[object Object]"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap MuiListItemText-primary css-1f0fhap-MuiTypography-root"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
</div>
`;
